--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "sequelize": "^5.2.8"
+    "sequelize": "^5.2.8",
+    "sequelize-cli": "^5.4.0"
   },
   "scripts": {
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server",
