--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "movie-app",
   "version": "0.1.0",
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "11.9.0",
+    "npm": "6.9.0"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
